# picsimlab_python_rcontrol

./: README.md  pyproject.toml
examples/: teste.py  teste_osc.py  teste_spare.py
src/PICSimLab_rcontrol/: PICSimLab_rcontrol.py  __init__.py
