[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "PICSimLab_rcontrol"
version = "0.9.2"
description = "PICSimLab Remote Control Library"
readme = "README.md"
authors = [
    {name = "L.C. Gamboa", email="lcgamboa@yahoo.com"}
]
requires-python = ">=3.9"
keywords = [
    "PICSimLab",
    "simulation",
    "rcontrol",
    "python",
    "esp32",
    "pic18f",
    "pic16f",
    "avr",
    "arduino",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "GPL-2.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/lcgamboa/picsimlab_python_rcontrol"
Issues = "https://github.com/lcgamboa/picsimlab_python_rcontrol/issues"
Source = "https://github.com/lcgamboa/picsimlab_python_rcontrol"

